--- a/L4e/style.css
+++ b/L4e/style.css
@@ -113,3 +113,54 @@
         box-shadow:-webkit-box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 43px -8px 10px -13px rgba(0,0,0,0); 
 box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 43px -8px 10px -13px rgba(0,0,0,0);
 }
+
+.grid{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	grid-gap: 20px;
+
+}
+
+.product{
+	background: darkcyan;
+	grid-row: 1/4;
+        grid-column: 1/3;
+        display: flex;
+}
+.preview, .info{
+	width: 50%;
+	margin: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+.preview{
+	
+	background: red;
+}
+.preview img{
+	width: 100%;
+ 
+}
+.buttons{
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.info{
+	
+	background: green;
+}
+.ad{
+        background: gold;
+        grid-row: 1/3;
+        grid-column: 3/4;
+}
+.also{
+	background: green;
+	grid-row: 3/4;
+        grid-column: 3/4;
+}
